--- a/PCD.html
+++ b/PCD.html
@@ -7,7 +7,7 @@
     <style>
 
     </style>
-    <title>Desafio do Cordel Moderno</title>
+    <title>Projeto Cordel Moderno</title>
 </head>
 <body>
 
