--- a/PCD.html
+++ b/PCD.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/PCD.css">
-    <style>
-
-    </style>
+    <link rel="shortcut icon" href="icons/Arturo-Wibawa-Akar-Book.32.png" type="image/x-icon">
     <title>Projeto Cordel Moderno</title>
 </head>
 <body>
