--- a/PCD.html
+++ b/PCD.html
@@ -98,7 +98,7 @@
 
     <footer>
         <p>
-            Criado por <a href="https://github.com/Skarzyll" target="_blank">Caio Cezar</a> e <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a>.
+            Criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a>. Codificado por <a href="https://github.com/Skarzyll" target="_blank">Caio Cezar</a>.
         </p>
     </footer>
 </body>
